<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="6">

    <TextView
        android:id="@+id/toDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:clickable="true"
        android:padding="5dp"
        android:text="@string/date"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/toTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:clickable="true"
        android:padding="5dp"
        android:text="@string/time"
        android:textSize="12sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/toActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:clickable="true"
        android:padding="5dp"
        android:text="@string/activity"
        android:textSize="12sp" />

</LinearLayout>